# Transkriptionen

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  transcribe.py
.devcontainer/: Dockerfile
static/: app.js  style.css
