[tool.poetry]
name = "transkriptionen"
version = "0.1.0"
description = "Local WhisperX transcription + diarization to Markdown"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = ">=2,<3"
torchaudio = ">=2,<3"
whisperx = ">=3,<4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
