[tool.poetry]
name = "transkriptionen"
version = "0.1.0"
description = "Local WhisperX transcription + diarization to Markdown"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2,<3"
torchaudio = ">=2,<3"
mlx-whisper = ">=0.1.0"
pyannote-audio = ">=3.1"
flask = "^3.0"
ffmpeg = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
